--- a/rest_api/templates/usuarios/usuarios.html
+++ b/rest_api/templates/usuarios/usuarios.html
@@ -1,17 +1,22 @@
 {% extends 'usuarios/base.html' %}
 {% block conteudo %}
+<body>
+    <a href="usuarios/disciplinas.html">Listar as disciplinas</a>
+</body>
 <form action="% url 'listar_usuarios' %">
     <div class="container">
         <h1>Usuários Cadastrados</h1>
         <table class="table table-bordered table-striped">
             <tr>
-                <th>id</th>
+                <th></th>
                 <th>username</th>
+                <th>e-mail</th>
             </tr>
             {% for usuario in usuarios %}
             <tr>
                 <td>{{usuario.id_usuario}}</td>
                 <td>{{usuario.username}}</td>
+                <td>{{usuario.email}}</td>
             </tr>
             {% endfor %}
         </table>
