--- a/rest_api/templates/usuarios/usuarios.html
+++ b/rest_api/templates/usuarios/usuarios.html
@@ -1,7 +1,7 @@
 {% extends 'usuarios/base.html' %}
 {% block conteudo %}
 <body>
-    <a href="usuarios/disciplinas.html">Listar as disciplinas</a>
+    <a href="http://127.0.0.1:8000/usuarios/disciplinas.html">Listar as disciplinas</a>
 </body>
 <form action="% url 'listar_usuarios' %">
     <div class="container">
