--- a/rest_api/templates/usuarios/disciplinas.html
+++ b/rest_api/templates/usuarios/disciplinas.html
@@ -1,19 +1,16 @@
 {% extends 'usuarios/base.html' %}
 {% block conteudo %}
-<form action="% url 'listar_disciplinas' %">
+<form action="% url 'listar_disciplinas' %" method="get">
     <div class="container">
         <h1>Disciplinas Cadastradas</h1>
         <table class="table table-bordered table-striped">
             <tr>
-                <th></th>
-                <th>cod_disciplina</th>
                 <th>nome_disciplina</th>
                 <th>carga_horaria</th>
                 <th>periodo</th>
             </tr>
             {% for disciplina in disciplinas %}
             <tr>
-                <td>{{disciplina.cod_disciplina_disciplina}}</td>
                 <td>{{disciplina.nome_disciplina}}</td>
                 <td>{{disciplina.carga_horaria}}</td>
                 <td>{{disciplina.periodo}}</td>
