--- a/rest_api/templates/usuarios/usuarios.html
+++ b/rest_api/templates/usuarios/usuarios.html
@@ -12,7 +12,10 @@
           <span class="navbar-brand mb-0 h1">Usuários Cadastrados</span>
         </div>
     </nav>
-    <a href="http://127.0.0.1:8000/usuarios/disciplinas.html">Listar as disciplinas</a>
+    <div style="text-align: center; margin-top: 30px;">
+        <a href="http://127.0.0.1:8000/usuarios/disciplinas.html">Listar as disciplinas</a><br>
+        <a href="http://127.0.0.1:8000/usuarios/alunos.html">Listar os alunos</a>
+    </div>
 </body>
 <form action="% url 'listar_usuarios' %">
     <div class="container">
