--- a/rest_api/templates/usuarios/disciplinas.html
+++ b/rest_api/templates/usuarios/disciplinas.html
@@ -96,7 +96,8 @@
                     <a href="?page={{ page_obj.next_page_number }}">Próxima</a>
                     <a href="?page={{ page_obj.paginator.num_pages }}">Última &raquo;</a>
                 {% endif %}
-            </div>
+            </div><br><br>
+            <p><a href="http://127.0.0.1:8000/usuarios/home.html">Voltar para página inicial</a></p>
         </div>
     </form>
 </body>
