--- a/rest_api/templates/usuarios/disciplina.html
+++ b/rest_api/templates/usuarios/disciplina.html
@@ -16,8 +16,8 @@
     <div style="text-align: center;" class="container">
         <h1>{{ disciplina.nome_disciplina }}</h1>
         <p><strong>Carga Horária:</strong> {{ disciplina.carga_horaria }} horas</p>
-        <p><strong>Período:</strong> {{ disciplina.periodo }}</p>
-        <p><a href="http://127.0.0.1:8000/usuarios/disciplinas.html">Voltar para a lista</a></p>
+        <p><strong>Período:</strong> {{ disciplina.periodo }}° período</p>
+        <br><p><a href="http://127.0.0.1:8000/usuarios/disciplinas.html">Voltar para a lista das disciplinas</a></p>
     </div>
 </body>
 </html>
