--- a/rest_api/templates/usuarios/alunos.html
+++ b/rest_api/templates/usuarios/alunos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Listagem dos alunos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
