--- a/rest_api/templates/usuarios/cadastro-aluno.html
+++ b/rest_api/templates/usuarios/cadastro-aluno.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Matrícula do aluno</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style_2.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_3.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        h1 {
+            font-size: 28px;
+            text-align: center;
+            background: linear-gradient(90deg, #4facfe, #00f2fe); /* Gradiente azul */
+            font-family: 'Verdana', sans-serif;
+            margin-bottom: 24px;
+        }
+    </style>
     <script>
         $(document).ready(function() {
             // Função para formatar o CPF enquanto o usuário digita
@@ -21,9 +32,9 @@
     </script>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-container">
-            <h1>Matricular Aluno</h1>
+    <nav style="background-color: blue !important;" class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h2" style="color: white;">Matricular novo aluno</span>
         </div>
     </nav>
     <div class="login-container">
@@ -38,7 +49,8 @@
                 <label for="cpf">CPF</label>
                 <input type="text" id="cpf" name="cpf" required placeholder="Digite o CPF" maxlength="14">
             </div>
-            <button type="submit" class="btn-submit">Matricular</button>
+            <button type="submit" class="btn-submit">Matricular</button><br><br>
+            <li><a href="http://127.0.0.1:8000/usuarios/home.html"><i class="fas fa-sign-out-alt"></i> Voltar para a página inicial</a></li>
         </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         {% if erro %}
@@ -47,7 +59,6 @@
         {% if message %}
         <br><br><p class="error-message" style="color: red;">{{ message }}</p>
         {% endif %}
-    </div><br><br><br>
-    <p><a href="http://127.0.0.1:8000/usuarios/home.html">Voltar para página inicial</a></p>
+    </div>
 </body>
 </html>
