--- a/rest_api/templates/usuarios/login.html
+++ b/rest_api/templates/usuarios/login.html
@@ -48,7 +48,7 @@
           font-size: 36px;
           text-align: center;
           background: linear-gradient(90deg, #4facfe, #00f2fe); /* Gradiente azul */
-          font-family: 'Verdana', sans-serif;
+          font-family: "Times New Roman", Times, serif;
           margin-bottom: 20px;
       }
       .error-message {
