--- a/rest_api/templates/usuarios/turmas.html
+++ b/rest_api/templates/usuarios/turmas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listagem das disciplinas</title>
+    <title>Listagem das turmas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -60,27 +60,25 @@
     </style>
 </head>
 <body>
-    <form action="% url 'listar_disciplinas' %" method="get">
+    <form action="% url 'listar_turmas' %" method="get">
         <div class="container">
-            <h1 class="text-primary">Disciplinas Cadastradas</h1>
+            <h1 class="text-primary">Turmas Cadastradas</h1>
             <table border="1" cellpadding="10" class="table table-bordered table-striped">
                 <thead>
                     <tr>
                         <th>nome_disciplina</th>
-                        <th>carga_horaria</th>
-                        <th>periodo</th>
+                        <th>semestre</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for disciplina in page_obj %}
+                    {% for turma in page_obj %}
                     <tr>
                         <td>
-                            <a href="{% url 'detalhar_disciplina' disciplina.cod_disciplina %}">
-                                {{ disciplina.nome_disciplina }}
+                            <a href="{% url 'detalhar_aluno_in_turma' turma.id %}">
+                                {{ turma.disciplina.nome_disciplina }}
                             </a>
                         </td>
-                        <td>{{disciplina.carga_horaria}}</td>
-                        <td>{{disciplina.periodo}}</td>
+                        <td>{{turma.semestre}}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
