--- a/rest_api/static/css/style_2.css
+++ b/rest_api/static/css/style_2.css
@@ -11,7 +11,7 @@ body {
     background-color: #e9eff1;
     display: flex;
     flex-direction: column;
-    background-image: url('images/image_scholar_02.webp');
+    background-image: url('images/image_scholar.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
