--- a/rest_api/templates/usuarios/login.html
+++ b/rest_api/templates/usuarios/login.html
@@ -3,38 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Tela de Login</title>
     <style>
       body {
-          background-image: url('static/css/images/image_scholar.webp'); /* Substitua pelo caminho correto */
+          background-image: url('static/css/images/image_scholar.webp');
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat;
-          height: 100vh; /* Ocupa 100% da altura da tela */
+          height: 100vh;
           margin: 0;
-          display: flex; /* Habilita o Flexbox */
-          justify-content: center; /* Centraliza horizontalmente */
-          align-items: center; /* Centraliza verticalmente */
+          display: flex;
+          justify-content: center;
+          align-items: center;
       }
       form {
-          background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com transparência */
+          background-color: rgba(255, 255, 255, 0.9);
           padding: 20px;
-          border-radius: 10px; /* Bordas arredondadas */
-          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Sombra para destaque */
-          text-align: center; /* Centraliza o texto no formulário */
+          border-radius: 10px;
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+          text-align: center;
       }
       input[type="text"], input[type="password"] {
           margin-bottom: 10px;
-          width: 100%; /* Ocupa a largura total */
+          width: 100%;
           padding: 10px;
           border: 1px solid #ccc;
           border-radius: 5px;
       }
       button {
-          width: 100%; /* Ocupa a largura total */
+          width: 100%;
           padding: 10px;
-          background-color: #446ad1; /* Azul do Facebook */
+          background-color: #446ad1;
           color: white;
           border: none;
           border-radius: 5px;
@@ -42,26 +43,31 @@
           font-size: 16px;
       }
       button:hover {
-          background-color: #3652a3; /* Azul mais escuro no hover */
-      }
-      h1 {
-          font-size: 36px;
-          text-align: center;
-          background: linear-gradient(90deg, #4facfe, #00f2fe); /* Gradiente azul */
-          font-family: "Times New Roman", Times, serif;
-          margin-bottom: 20px;
+          background-color: #3652a3;
       }
       .error-message {
           color: rgb(33, 29, 141);
-          text-align: center; /* Centraliza horizontalmente */
-          margin-top: 10px; /* Adiciona espaço acima da mensagem */
+          text-align: center;
+          margin-top: 10px;
       }
       .form-container {
           display: flex;
           flex-direction: column;
-          align-items: center; /* Centraliza horizontalmente */
-          justify-content: center; /* Centraliza verticalmente */
-          height: 100vh; /* Ocupa a altura total da página */
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+      }
+      .login-title {
+          font-size: 2rem;
+          font-weight: bold;
+          color: #06305b;
+          text-align: center;
+          margin-bottom: 20px;
+          font-family: 'Arial', sans-serif;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
       }
     </style>
   </head>
@@ -69,15 +75,15 @@
     <form method="post">
       {% csrf_token %}
       <div style="text-align: center;" class="container">
-          <h1>Tela de Login</h1>
+          <h1 class="login-title"><i class="fas fa-sign-in-alt"></i> Tela de Login</h1>
           Username <input name="username" class="form-control-sm" type="text">
           Senha <input name="password" class="form-control-sm" type="password">
-          <button class="form-control-sm">Login</button><br><br>
+          <button class="form-control-sm">Login</button><br>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+          {% if erro %}
+          <br><br><p class="error-message" style="color: red;">{{ erro }}</p>
+          {% endif %}
       </div>
     </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    {% if erro %}
-    <br><br><p class="error-message" style="color: red;">{{ erro }}</p>
-    {% endif %}
   </body>
 </html>
