--- a/rest_api/templates/usuarios/turmas.html
+++ b/rest_api/templates/usuarios/turmas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="icon" type="image/webp" href='/static/css/images/image_scholar_04.webp'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listagem das turmas</title>
@@ -57,17 +58,62 @@
             color: #888;
             padding: 15px;
         }
+
+        .edit-btn {
+            display: inline-block;
+            padding: 5px 5px;
+            background-color: green;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-size: 12px;
+            text-align: center;
+            width: 60px;
+            height: 10px;
+        }
+
+        .edit-btn:hover {
+            background-color: darkgreen;
+        }
+
+        .green-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s;
+        }
+
+        .green-button:hover {
+            background-color: #218838;
+        }
     </style>
 </head>
 <body>
-    <form action="% url 'listar_turmas' %" method="get">
+    <form action="{% url 'listar_turmas' %}" method="get">
         <div class="container">
+            <a href="{% url 'criar_turma' %}">
+                <button type="button" class="green-button">Criar uma turma</button>
+            </a>
             <h1 class="text-primary">Turmas Cadastradas</h1>
+            <div style="text-align: center; margin-bottom: 20px;">
+                <input type="text" name="search" placeholder="Digite o nome da disciplina da turma..." value="{{ search_query }}" style="padding: 8px; width: 50%; border: 1px solid #ccc; border-radius: 4px;">
+                <button type="submit" style="padding: 8px 15px; background-color: #007bff; color: white; border: none; border-radius: 4px;">Buscar</button>
+            </div>
+            <br>
             <table border="1" cellpadding="10" class="table table-bordered table-striped">
                 <thead>
                     <tr>
                         <th>nome_disciplina</th>
                         <th>semestre</th>
+                        <th>Ação</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -78,11 +124,15 @@
                                 {{ turma.disciplina.nome_disciplina }}
                             </a>
                         </td>
-                        <td>{{turma.semestre}}</td>
+                        <td>{{ turma.semestre }}</td>
+                        <td>
+                            <a href="{% url 'modificar_turma' turma.disciplina.cod_disciplina turma.semestre %}" class="edit-btn">Editar</a>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
-            </table><br>
+            </table>
+            <br>
             <div class="pagination">
                 {% if page_obj.has_previous %}
                     <a href="?page=1">&laquo; Primeira</a>
@@ -95,7 +145,8 @@
                     <a href="?page={{ page_obj.next_page_number }}">Próxima</a>
                     <a href="?page={{ page_obj.paginator.num_pages }}">Última &raquo;</a>
                 {% endif %}
-            </div><br><br>
+            </div>
+            <br><br>
             <p><a href="http://127.0.0.1:8000/usuarios/home.html">Voltar para página inicial</a></p>
         </div>
     </form>
